@@ -319,25 +319,11 @@ static struct request_ctx *request_create(struct worker_ctx *worker,
 static int request_start(struct request_ctx *ctx, knot_pkt_t *query)
 {
 	assert(query && ctx);
-	size_t answer_max = KNOT_WIRE_MIN_PKTSIZE;
-	struct kr_request *req = &ctx->req;
 
-	/* source.session can be empty if request was generated by kresd itself */
-	struct session *s = ctx->source.session;
-	if (!s || session_get_handle(s)->type == UV_TCP) {
-		answer_max = KNOT_WIRE_MAX_PKTSIZE;
-	} else if (knot_pkt_has_edns(query)) { /* EDNS */
-		answer_max = MAX(knot_edns_get_payload(query->opt_rr),
-				 KNOT_WIRE_MIN_PKTSIZE);
-	}
+	struct kr_request *req = &ctx->req;
 	req->qsource.size = query->size;
 	if (knot_pkt_has_tsig(query)) {
 		req->qsource.size += query->tsig_wire.len;
-	}
-
-	knot_pkt_t *answer = knot_pkt_new(NULL, answer_max, &req->pool);
-	if (!answer) { /* Failed to allocate answer */
-		return kr_error(ENOMEM);
 	}
 
 	knot_pkt_t *pkt = knot_pkt_new(NULL, req->qsource.size, &req->pool);
@@ -354,7 +340,7 @@ static int request_start(struct request_ctx *ctx, knot_pkt_t *query)
 	/* Start resolution */
 	struct worker_ctx *worker = ctx->worker;
 	struct engine *engine = worker->engine;
-	kr_resolve_begin(req, &engine->resolver, answer);
+	kr_resolve_begin(req, &engine->resolver);
 	worker->stats.queries += 1;
 	/* Throttle outbound queries only when high pressure */
 	if (worker->stats.concurrent < QUERY_RATE_THRESHOLD) {
