@@ -15,6 +15,11 @@ Bugfixes
 - avoid an assert() error in stash_rrset() (!1072)
 - fix emergency cache locking bug introduced in 5.1.3 (!1078)
 
+Incompatible changes
+--------------------
+- minor changes in module API; see upgrading guide:
+  https://knot-resolver.readthedocs.io/en/stable/upgrading.html
+
 
 Knot Resolver 5.1.3 (2020-09-08)
 ================================
